# trend_scrapper

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: config.py  driver_setup.py  main.py  scraper.py  utils.py
