[tool.poetry]
name = "trend-scrapper"
version = "0.1.0"
description = ""
authors = ["renzofu <renz_alexander@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.25.0"
beautifulsoup4 = "^4.12.3"
pandas = "^2.2.3"
requests = "^2.32.3"
lxml = "^5.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
